--- a/views/about.pug
+++ b/views/about.pug
@@ -12,10 +12,10 @@ block content
       .about-intro-box.box
 
         //- Replace with your name
-        h1 Name
+        h1 Leandro Gomes
 
         //- Feel free to personalize the title below
-        p Full Stack JavaScript Developer
+        p Software Developer
 
 
         .about-bio
@@ -29,29 +29,28 @@ block content
 
         //- Replace skills below with your own skills — at this point, you should be able to list as many as ten skills
         ul
+          li JavaScript
+          li jQuery
+          li Node.js / Express.js
           li HTML
           li CSS
-          li JavaScript
           li Git and GitHub
           li VS Code
-          li Accessibility
-          li OOP
+          li Object-Oriented Programming
           li Fetch and Public APIs
-          li Node.js
-          li Express
-          li Pug
+          li Statistics and Data analysis 
 
         h6 Contact Info
 
         //- Replace with your own contact info - feel free to use fake information if you prefer
         ul
           li 555-555-1234
-          li email@email.com
+          li not_my_real_mail@email.com
 
         //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
-        a.btn-link(href='') LinkedIn
-        a.btn-link(href='') GitHub
-        a.btn-link(href='') Twitter
+        a.btn-link(href='https://www.xing.com/profile/Leandro_Gomes2/cv') Xing
+        a.btn-link(href='https://github.com/Leandro-GomesSilva') GitHub
+        a.btn-link(href='https://teamtreehouse.com/leandrogomessilvaesilva') Treehouse
 
     nav.nav
       a(href='/')
