--- a/views/index.pug
+++ b/views/index.pug
@@ -23,6 +23,6 @@ block content
 
         .cell
           a(href=`/project/${project.id}`)
-            img.thumbnail(src=`${project.image_urls[0]}`, alt='')
+            img.thumbnail(src=`${project.image_urls[0]}`, alt='123')
             h5 #{project.project_name}
 
