--- a/views/project.pug
+++ b/views/project.pug
@@ -10,22 +10,33 @@ block content
   article.portfolio-projects
     .inner-wrapper.flex-row-wrap.two-col
       .project-info-box.box
+
+        //- Use the info in your data file and the comments below to complete this template
+
+        //- Use interpolation to dynamically add the project title
         h1 #{project_name}
+
+        //- Use interpolation to dynamically add the project description
         p #{description}
 
       .project-tech-links-box.box
         h6 Technologies
         ul
+
+          //- Use an `each` iterator and interpolation to dynamically replace the li tags below with the technologies listed for this project
           each technology in technologies
             li #{technology}
 
+
+        //- Add the href values to the links below
         a.btn-link(href=`${live_link}` target="_blank") Live Demo
         a.btn-link(href=`${github_link}` target="_blank") GitHub Repo
 
     .project-img-box.box
 
-      each url in image_urls
-        img.project-img(src=`${url}`, alt='')
+      //- Replace the URLs in the src attributes below with interpolated template literals to dynamically add your project images, and add descriptions to the alt attributes
+      img.project-img(src=`${image_urls[1]}`, alt='123')
+      img.project-img(src=`${image_urls[2]}`, alt='123')
 
     nav.nav
       a(href='/')
