--- a/views/about.pug
+++ b/views/about.pug
@@ -11,10 +11,8 @@ block content
     .inner-wrapper.flex-row-wrap.two-col
       .about-intro-box.box
 
-        //- Replace with your name
         h1 Leandro Gomes
 
-        //- Feel free to personalize the title below
         p Software Developer
 
 
@@ -27,7 +25,6 @@ block content
       .skills-contact-box.box
         h6 Skills
 
-        //- Replace skills below with your own skills — at this point, you should be able to list as many as ten skills
         ul
           li JavaScript
           li jQuery
@@ -42,15 +39,13 @@ block content
 
         h6 Contact Info
 
-        //- Replace with your own contact info - feel free to use fake information if you prefer
         ul
-          li 555-555-1234
+          li +49 123 4567890
           li not_my_real_mail@email.com
 
-        //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
-        a.btn-link(href='https://www.xing.com/profile/Leandro_Gomes2/cv') Xing
-        a.btn-link(href='https://github.com/Leandro-GomesSilva') GitHub
-        a.btn-link(href='https://teamtreehouse.com/leandrogomessilvaesilva') Treehouse
+        a.btn-link(href='https://www.xing.com/profile/Leandro_Gomes2/cv' target="_blank") Xing
+        a.btn-link(href='https://github.com/Leandro-GomesSilva' target="_blank") GitHub
+        a.btn-link(href='https://teamtreehouse.com/leandrogomessilvaesilva' target="_blank") Treehouse
 
     nav.nav
       a(href='/')
