CSS Alternate Design
JavaScript dynamic DOM manipulation and first lines of the CSS alternate design file.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,8 @@ html(lang="en" dir="ltr")
     link(href='https://fonts.googleapis.com/css?family=Merriweather:300,400,400i,700,800', rel='stylesheet')
     link(rel='stylesheet', href='/static/css/normalize.css')
     link(rel='stylesheet', href='/static/css/styles.css')
+    //- Linking the file for the alternate CSS design to the 'head'
+    link(id='alternateCSS', rel='stylesheet', href='/static/css/alternateStyle.css')
 
   body
     #my-info.sidebar
