--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -362,3 +362,35 @@ nav a span {
     max-width: 1200px;
   }
 }
+
+
+
+/*
+  Extra CSS lines
+*/
+
+.divHeader-js {
+  display: flex;
+}
+
+.divHeader-js h1{
+  margin-right: 1em;
+}
+
+.toogle-button {
+  background-color: #4CAF50;
+  color:#eaeaea;
+  border: none;
+  font-size: 18px;
+  font-family: 'Merriweather', serif;
+  padding: 12px;
+  flex-grow: 0;
+  align-self: center;
+  transition: 0.3s ease-in-out;
+}
+
+.toogle-button:hover {
+  background-color: #054607;
+  transform: translateX(-15px);
+  transition: 0.5s ease-in-out;
+}
