--- a/public/css/alternateStyle.css
+++ b/public/css/alternateStyle.css
@@ -1,11 +1,151 @@
-.toogle-button {
-    background-color: #111;
-    color:#eaeaea;
-    border: none;
-    font-size: 1px;
-    font-family: 'Merriweather', serif;
-    padding: 111px;
-    flex-grow: 0;
-    align-self: center;
-    transition: 0.3s ease-in-out;
-  }
+/*
+  Main styles for the alternate design. Only what is different then the original design must be declared.
+*/
+
+body {
+  font-family: Garamond, Georgia, 'Times New Roman', Times, serif;
+  background: #000;
+  background: linear-gradient(-45deg, #360033, #0b8793);
+  background-size: 400%, 400%;
+  position: relative;
+  animation: change 10s ease-in-out infinite;
+}
+
+@keyframes change {
+0%{
+  background-position: 0 50%;
+}
+50%{
+  background-position: 100% 50%;
+}
+100%{
+  background-position: 0 50%;
+}
+}
+
+body * {
+  font-family: Garamond, Georgia, 'Times New Roman', Times, serif;
+}
+
+.portfolio-intro h1, .box h1 {
+  color: #f3f3f3;
+  font-size: 56px;
+  line-height: 74px;
+}
+
+.box p {
+  font-size: 42px;
+  margin-top: 0;
+  padding-top: 0;
+}
+
+.portfolio-intro p, .about-bio p {
+  font-size: 24px;
+}
+
+p{
+  color: #f3f3f3;
+  padding-top: 15px;
+}
+
+article, .wrapper, .box {
+  background: #ff000000;
+}
+
+
+/*
+  Sidebar
+*/
+
+.sidebar {
+  box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
+  border-radius: 15px;
+  background: rgba(0, 0, 0, 0.5);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(15px);
+}
+
+.sidebar h5 {
+  color: #f3f3f3;
+  font-size: 32px;
+}
+
+.sidebar p {
+  color: #f3f3f3;
+  font-size: 24px;
+}
+
+.sidebar a, .nav a {
+  color: #f3f3f3;
+  font-size: 24px;
+  transition: 0.2s ease-in-out;
+}
+
+.sidebar a:hover, .nav a:hover {
+  color: #4CAF50;
+  font-size: 26px;
+  transition: 0.2s ease-in-out;
+}
+
+
+/*
+  Cells
+*/
+
+.cell {
+  position: relative;
+  box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
+  border-radius: 15px;
+  padding: 25px;
+  background: rgba(255, 255, 255, 0.1);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(5px);
+}
+
+.cell img {
+  transform: scale(0);
+  transition: 0.5s;
+}
+
+.cell:hover img {
+  transform: scale(1);
+  transition: 0.5s ease-in-out;
+}
+
+.cell h5 {
+  color: #f3f3f3;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  padding: 0px 15px;
+  left: 0%;
+  min-width: 100%;
+  max-width: 100%;
+  top:0%;
+  min-height: 100%;
+  max-height: 100%;
+  text-align: center;
+  font-size: 2.3em;
+  transition: 0.5s ease-out;
+}
+
+.cell:hover h5{
+  transform: translateY(-50%);
+  opacity: 0;
+  transition: 0.5s ease-in;
+}
+
+
+/*
+  Extras
+*/
+
+.btn-link {
+  background-color: #4CAF50;
+  font-size: 24px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border-radius: 10px;
+}
