--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -378,6 +378,9 @@ nav a span {
 }
 
 .toogle-button {
+  min-width: 180px;
+  height: 66px;
+  border-radius: 10px;
   background-color: #4CAF50;
   color:#eaeaea;
   border: none;
@@ -385,12 +388,18 @@ nav a span {
   font-family: 'Merriweather', serif;
   padding: 12px;
   flex-grow: 0;
-  align-self: center;
+  align-self: flex-start;
   transition: 0.3s ease-in-out;
 }
 
-.toogle-button:hover {
-  background-color: #054607;
+.toogle-button:hover, .btn-link:hover {
+  background-color: #504caf;
   transform: translateX(-15px);
   transition: 0.5s ease-in-out;
+}
+
+.toogle-button:active, .btn-link:active {
+  background-color: #ebf0ec;
+  color: #4CAF50;
+  transition: 0s;
 }
