--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,8 +11,8 @@ body {
   font-size: 100%;
   width: 100%;
   min-width: 100%;
-  /*height: 100%;         This two properties negatively impact the animated background and the sidebar, so I had to hide them. It doesn't seem to have any collateral effect.
-  min-height: 200%;*/
+  /*height: 100%;*/     
+  min-height: 100vh;    /* This property was conflicting with the animated background and thus needed to be changed. */
 }
 
 body {
