--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,7 @@ html(lang="en" dir="ltr")
     link(rel='stylesheet', href='/static/css/normalize.css')
     link(rel='stylesheet', href='/static/css/styles.css')
     //- Linking the file for the alternate CSS design to the 'head'
-    link(id='alternateCSS', rel='stylesheet', href='/static/css/alternateStyle.css')
+    link(id='alternativeCSS', rel='stylesheet', href='/static/css/alternativeStyle.css')
 
   body
     #my-info.sidebar
