--- a/views/about.pug
+++ b/views/about.pug
@@ -18,7 +18,13 @@ block content
 
         .about-bio
 
-          p This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
+          p Around the year 1995 my father took home our first personal computer. I was a little child and got fascinated with that machine. I remember his words: 'poke around it how much you want, click everywhere and find things out'.<br> 
+            | Years after, I was building my own PCs, repairing and maintainning the hardware and software of relatives and family-close friends and building up my knowledge around this technology. With 15, I enrolled for programming classes at my High School and learned my first programming language, C.<br>
+            | The 'dot.com crash' came and considering the conditions of my home country, Brazil, I had to decide between following my passion or aiming for security and stability. Thus, I enrolled for Chemical Engineering at the university.<br>
+            | Although not in an IT related field, I lent to areas of the chemical engineering heavly-based on IT: I built CFD (Computational Fluid Dynamics) simulations in the course of my diploma and master thesis and got heavly into statistics and data analysis with Minitab and SPSS.<br>
+            | Living nowadays in the 'Digital Era', I see it as an opportunity to 'bring things to where they belong' i.e. to follow my passion. I enrolled for a Techdegree in Fullstack JavaScript and stablished the goal to never stop learning IT skills.<br>
+            | In any case these skills will be certainly very useful in my current carreer path. Moreover, they will help me to bring to life some ideas for personal projects that I have. Ultimately I aim tough for a carreer pivot working as a Software Engineer.<br>
+            | My experience in the industry and e-commerce and specially my splendid abilities for problem-solving and logical / mathematical thinking and finally my passion will be for sure very useful in your IT-team.
 
 
       .skills-contact-box.box
@@ -30,11 +36,11 @@ block content
           li Node.js / Express.js
           li HTML
           li CSS
+          li Pug
           li Git and GitHub
           li VS Code
           li Object-Oriented Programming
           li Fetch and Public APIs
-          li Statistics and Data analysis 
 
         h6 Contact Info
 
