--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html(lang="en" dir="ltr")
     link(href='https://fonts.googleapis.com/css?family=Merriweather:300,400,400i,700,800', rel='stylesheet')
     link(rel='stylesheet', href='/static/css/normalize.css')
     link(rel='stylesheet', href='/static/css/styles.css')
-    //- Linking the file for the alternate CSS design to the 'head'
+    //- Linking the file for the alternative CSS design to the 'head'
     link(id='alternativeCSS', rel='stylesheet', href='/static/css/alternativeStyle.css')
 
   body
@@ -21,7 +21,7 @@ html(lang="en" dir="ltr")
 
           h5 Leandro Gomes
 
-          p Engineer holding a M.Sc. degree, an eternal lerneer in love with technology, who wishes to dedicate my professional life to Information Technology.
+          p Engineer holding a M.Sc. degree, passionated for IT, computer software and hardware and ultimately an eternal learner.
 
           a(href='/about') Learn More &rarr;
 
