Project descriptions (data.json)
Writing the well-elaborated project descriptions in the data.json file.

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,8 +7,8 @@ block content
     h1 Static Node.js and Express Site a.k.a. "My Portfolio"
 
     p This is a server-side JavaScript application built with Node.js / Express and concerns my fictional portfolio site, which showcases the projects I had built so far in my Full Stack JavaScript Techdegree. 
-      | This is not intended to be my real online portfolio (which will be built later from strach and whose link will be then shared in this session of this page), but just one more project in my portfolio and a way to show up my general back-end skills, specifically with Node.js and Express.
-      | I also took the oportunity in this project to practice my CSS skills. You find in the top right corner of the screen a toogle buttom that will switch back and forth between the original CSS layout and my own-made CSS layout.
+      | This is not intended to be my real online portfolio (which will be built later from strach and whose link will be shared in this session of this page), but just one more project in my portfolio and a way to show up my general back-end skills, specifically with Node.js and Express.
+      | I also took the oportunity in this project to practice my CSS skills. You find in the top right corner of the screen a toogle buttom that will switch back and forth between the original CSS layout and my own-made CSS layout, which showcases concepts like flexbox and animations.
 
 
   article.portfolio-project-thumbs
