Bug correction and favicon
Fixing a bug in the script.js file and adding a favicon to the images folder.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,6 +10,8 @@ html(lang="en" dir="ltr")
     link(rel='stylesheet', href='/static/css/styles.css')
     //- Linking the file for the alternative CSS design to the 'head'
     link(id='alternativeCSS', rel='stylesheet', href='/static/css/alternativeStyle.css')
+    //- Adding a link to a favicon
+    link(rel="shortcut icon", type="image/x-icon", href="/static/images/favicon.ico")
 
   body
     #my-info.sidebar
